--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -16,12 +16,32 @@
     <string name="theme_dark">Mode Gelap</string>
     <string name="theme_system">Default Sistem</string>
     <string name="theme_dark_mode_toggle">Alihkan Mode Gelap</string>
-    <string name="theme_toggle_menu_item_light">Ganti ke Mode Terang</string>
-    <string name="theme_toggle_menu_item_dark">Ganti ke Mode Gelap</string>
+    <string name="theme_toggle_menu_item_light">Mode Terang</string>
+    <string name="theme_toggle_menu_item_dark">Mode Gelap</string>
     <string name="language_title">Bahasa</string>
     <string name="language_english">Inggris</string>
     <string name="language_indonesian">Indonesia</string>
-    <string name="language_chinese">Mandarin</string>
+    <string name="language_chinese">Mandarin (Sederhana)</string>
+    <string name="system_default">Default Sistem</string>
+    <string name="class_program_title">Program Kelas</string>
+
+    <!-- Titles for Navigation -->
+    <string name="title_home">Beranda</string>
+    <string name="title_schedule">Jadwal</string>
+    <string name="title_materials">Materi</string>
+    <string name="title_groups">Grup</string>
+    <string name="title_reminders">Pengingat</string>
+
+    <!-- Program Info Strings -->
+    <string name="program_info_title">Pengaturan Kelas/Program</string>
+    <string name="program_info_description">Atur detail kelas atau program Anda di sini.</string>
+    <string name="program_info_name_label">Nama Kelas/Program</string>
+    <string name="program_info_name_hint">Masukkan nama kelas/program</string>
+    <string name="program_info_semester_label">Semester Saat Ini</string>
+    <string name="program_info_semester_hint">Masukkan semester saat ini</string>
+    <string name="program_info_save_button">Simpan Perubahan</string>
+    <string name="program_info_changes_saved">Informasi Kelas/Program disimpan.</string>
+    <string name="program_info_error_empty_field">Bagian ini tidak boleh kosong.</string>
 
     <!-- Bottom Navigation Menu -->
     <string name="bottom_nav_home">Beranda</string>
@@ -29,5 +49,139 @@
     <string name="bottom_nav_materials">Materi</string>
     <string name="bottom_nav_groups">Grup</string>
     <string name="bottom_nav_reminders">Pengingat</string>
-    <string name="bottom_nav_class_program">Kelas/Program</string>
+    <string name="bottom_nav_class_program">Program Kelas</string>
+
+    <!-- Materials Feature Strings -->
+    <string name="manage_materials_description">Atur catatan visual dan dokumen untuk setiap mata pelajaran</string>
+    <string name="materials_tab_visual_notes">Catatan Visual</string>
+    <string name="materials_tab_files_documents">File &amp; Dokumen</string>
+    <string name="add_material_fab_description">Tambah materi baru</string>
+    <string name="empty_materials_list_visual_notes">Belum ada catatan visual untuk mata pelajaran ini.</string>
+    <string name="empty_materials_list_files">Belum ada file atau dokumen untuk mata pelajaran ini.</string>
+    <string name="empty_materials_no_subject_selected">Pilih mata pelajaran untuk melihat materi.</string>
+    <string name="empty_materials_add_subjects_prompt">Harap tambahkan mata pelajaran di bagian Jadwal terlebih dahulu untuk mengatur materi Anda.</string>
+    <string name="error_no_file_to_open">Tidak ada file untuk dibuka</string>
+    <string name="error_file_not_found">File tidak ditemukan</string>
+    <string name="error_opening_file">Kesalahan saat membuka file</string>
+    <string name="open_file_with">Buka file dengan</string>
+    <string name="file_name_label">File: %1$s</string>
+    <string name="material_date_added_text_view">Ditambahkan: %1$s</string>
+    <string name="delete_material_title">Hapus Materi</string>
+    <string name="delete_material_message">Apakah Anda yakin ingin menghapus materi ini?</string>
+    <string name="material_deleted_message">Materi berhasil dihapus</string>
+    <string name="error_file_required">Silakan pilih file</string>
+    <string name="error_title_required">Judul wajib diisi</string>
+    <string name="error_subject_required">Mata pelajaran wajib diisi</string>
+    <string name="material_folder_icon_description">Ikon folder mata pelajaran</string>
+    <string name="material_count_format">%d materi</string>
+    <string name="subject_materials_title">Materi untuk %s</string>
+    <string name="empty_subjects_message">Tidak ada mata pelajaran tersedia. Harap tambahkan mata pelajaran di bagian Jadwal terlebih dahulu.</string>
+    <string name="select_material_type">Pilih Jenis Materi</string>
+
+    <string name="dialog_title_add_visual_note">Tambah Catatan Visual Baru</string>
+    <string name="dialog_title_add_file">Tambah File Baru</string>
+    <string name="dialog_title_edit_material">Edit Materi</string>
+    <string name="hint_material_title">Judul Materi (Wajib)</string>
+    <string name="hint_material_subject">Mata Pelajaran (Wajib)</string>
+    <string name="button_select_file">Pilih File</string>
+    <string name="button_take_photo">Ambil Foto</string>
+    <string name="button_save">Simpan</string>
+    <string name="button_cancel">Batal</string>
+    <string name="error_no_subject_in_schedule">Harap tambahkan mata pelajaran di Jadwal terlebih dahulu.</string>
+    <string name="material_type_visual_note">CATATAN_VISUAL</string>
+    <string name="material_type_file">FILE</string>
+    <string name="edit_button_text">Edit</string>
+    <string name="delete_button_text">Hapus</string>
+    <string name="confirm_delete_material_title">Hapus Materi</string>
+    <string name="confirm_delete_material_message">Apakah Anda yakin ingin menghapus materi ini? Tindakan ini tidak dapat dibatalkan.</string>
+    <string name="yes">Ya</string>
+    <string name="no">Tidak</string>
+
+    <!-- Class Schedule Feature Strings -->
+    <string name="schedule_header_title">Jadwal Kelas</string>
+    <string name="schedule_header_description">Kelola kelas dan kuliah mingguan Anda.</string>
+    <string name="schedule_program_name_display">Kelas/Program: %s</string>
+    <string name="schedule_semester_display">Semester: %s</string>
+    <string name="schedule_prompt_setup_program_info_card">Nama Kelas/Program dan Semester belum diatur. <a href="setup_program">Atur di sini.</a></string>
+    <string name="schedule_prompt_setup_program_info_empty_state">Nama Kelas/Program dan Semester belum diatur. <a href="setup_program">Atur di sini</a>. Klik "Tambah Jadwal" untuk memulai.</string>
+    <string name="schedule_empty_title">Jadwal Anda kosong.</string>
+    <string name="schedule_empty_for_day">Tidak ada jadwal untuk %1$s.</string>
+    <string name="schedule_empty_title_no_day_selected">Tidak ada hari yang dipilih. Silakan pilih hari untuk melihat jadwal.</string>
+    <string name="schedule_fab_add_class">Tambah Jadwal</string>
+
+    <string name="dialog_title_add_class">Tambah Jadwal Baru</string>
+    <string name="dialog_title_edit_class">Edit Jadwal Kelas</string>
+    <string name="hint_class_subject_name">Nama Mata Pelajaran (Wajib)</string>
+    <string name="hint_class_day_of_week">Hari (Wajib)</string>
+    <string name="hint_class_start_time">Waktu Mulai (Wajib)</string>
+    <string name="hint_class_end_time">Waktu Selesai (Wajib)</string>
+    <string name="hint_class_location">Nama Ruangan (Opsional)</string>
+    <string name="hint_class_teacher">Guru/Dosen (Opsional)</string>
+    <string name="button_add_class">Tambah Jadwal</string>
+
+    <string name="content_description_edit_schedule">Edit Jadwal</string>
+    <string name="content_description_delete_schedule">Hapus Jadwal</string>
+
+    <string-array name="days_of_week">
+        <item>Senin</item>
+        <item>Selasa</item>
+        <item>Rabu</item>
+        <item>Kamis</item>
+        <item>Jumat</item>
+        <item>Sabtu</item>
+        <item>Minggu</item>
+    </string-array>
+
+    <string name="error_class_subject_name_required">Nama mata pelajaran wajib diisi.</string>
+    <string name="error_class_day_of_week_required">Hari wajib dipilih.</string>
+    <string name="error_class_start_time_required">Waktu mulai wajib diisi.</string>
+    <string name="error_class_end_time_required">Waktu selesai wajib diisi.</string>
+    <string name="error_class_end_time_after_start_time">Waktu selesai harus setelah waktu mulai.</string>
+    <string name="class_schedule_entry_saved_successfully">Jadwal kelas disimpan.</string>
+    <string name="class_schedule_entry_deleted_successfully">Jadwal kelas dihapus.</string>
+    <string name="dialog_confirm_delete_class_title">Hapus Jadwal Kelas</string>
+    <string name="dialog_confirm_delete_class_message">Apakah Anda yakin ingin menghapus jadwal kelas ini? Tindakan ini tidak dapat dibatalkan.</string>
+    <string name="default_program_name">Belum Diatur</string>
+    <string name="default_semester">Belum Diatur</string>
+
+    <string name="error_class_day_of_week_invalid">Hari tidak valid. Silakan pilih dari daftar atau ketik nama hari yang valid.</string>
+    <string name="error_invalid_time_format">Format waktu tidak valid. Silakan gunakan HH:mm.</string>
+
+    <!-- Short Day Names for Day Selector -->
+    <string name="day_mon_short">Sen</string>
+    <string name="day_tue_short">Sel</string>
+    <string name="day_wed_short">Rab</string>
+    <string name="day_thu_short">Kam</string>
+    <string name="day_fri_short">Jum</string>
+    <string name="day_sat_short">Sab</string>
+
+    <!-- Groups Feature Strings -->
+    <string name="empty_groups_message">Belum ada grup belajar. Klik tombol \'+\' untuk membuat grup berdasarkan mata pelajaran dari jadwal Anda.</string>
+    <string name="add_subject_group">Tambah Grup Mata Pelajaran</string>
+    <string name="delete_group">Hapus Grup</string>
+    <string name="expand_collapse">Perluas/Ciutkan</string>
+    <string name="add_member">Tambah Anggota</string>
+    <string name="empty_members_message">Belum ada anggota di grup ini.</string>
+    <string name="edit_member">Edit Anggota</string>
+    <string name="delete_member">Hapus Anggota</string>
+    <string name="select_subject">Pilih Mata Pelajaran</string>
+    <string name="no_subjects_warning">Tidak ada mata pelajaran tersedia. Harap tambahkan mata pelajaran di bagian Jadwal terlebih dahulu.</string>
+    <string name="save">Simpan</string>
+    <string name="member_name">Nama Anggota</string>
+    <string name="member_role">Peran Anggota (Opsional)</string>
+    <string name="error_member_name_required">Nama anggota wajib diisi.</string>
+    <string name="group_saved_successfully">Grup mata pelajaran berhasil disimpan.</string>
+    <string name="group_deleted_successfully">Grup mata pelajaran berhasil dihapus.</string>
+    <string name="member_saved_successfully">Anggota grup berhasil disimpan.</string>
+    <string name="member_deleted_successfully">Anggota grup berhasil dihapus.</string>
+    <string name="confirm_delete_group_title">Hapus Grup Mata Pelajaran</string>
+    <string name="confirm_delete_group_message">Apakah Anda yakin ingin menghapus grup mata pelajaran ini? Semua anggota juga akan dihapus. Tindakan ini tidak dapat dibatalkan.</string>
+    <string name="confirm_delete_member_title">Hapus Anggota Grup</string>
+    <string name="confirm_delete_member_message">Apakah Anda yakin ingin menghapus anggota grup ini? Tindakan ini tidak dapat dibatalkan.</string>
+    <string name="direktori_grup">Direktori Grup</string>
+    <string name="direktori_grup_subtitle">Kelola grup belajar Anda untuk setiap mata pelajaran dari jadwal Anda.</string>
+    <string name="add_new_subject_group">Tambah Grup Mata Pelajaran Baru</string>
+    <string name="choose_subject_subtitle">Pilih mata pelajaran dari jadwal Anda untuk membuat grup.</string>
+    <string name="subject_from_schedule">Mata Pelajaran (dari Jadwal)</string>
+    <string name="cancel">Batal</string>
 </resources> 
